# Mexam

./: .gitignore  README.md  pyproject.toml
mexam/: __init__.py  __main__.py  abc_settings.py  cli.py  exam.py  misc.py  question_db.py
mexam/markdown/: __init__.py  convert.py  load.py  md_lib.py  save.py  settings.py
mexam/question/: __init__.py  answer.py  base.py  bilingual.py  mc_question.py  open_question.py
mexam/rexam/: __init__.py  convert.py  r_scripts.py
mexam/tex/: __init__.py  latex.py  latex_files.py  settings.py
